@@ -5,7 +5,10 @@ import com.intellij.codeInspection.LocalQuickFix;
 import com.intellij.codeInspection.ProblemDescriptor;
 import com.intellij.codeInspection.QuickFix;
 import com.intellij.grazie.GrazieConfig;
-import com.intellij.grazie.text.*;
+import com.intellij.grazie.text.CheckerRunner;
+import com.intellij.grazie.text.RuleGroup;
+import com.intellij.grazie.text.TextContent;
+import com.intellij.grazie.text.TextExtractor;
 import com.intellij.grazie.utils.Text;
 import com.intellij.lang.annotation.AnnotationBuilder;
 import com.intellij.lang.annotation.AnnotationHolder;
@@ -36,7 +39,7 @@ final class CommitAnnotator implements Annotator {
     CheckerRunner runner = new CheckerRunner(text);
     runner.run().forEach(problem -> {
       if (problem.fitsGroup(RuleGroup.UNDECORATED_SINGLE_SENTENCE) &&
-          Text.isSingleSentence(Text.findParagraphRange(text, problem.getHighlightRanges().get(0)).subSequence(text))) {
+          Text.isSingleSentence(Text.findParagraphRange(text, problem.getHighlightRanges().getFirst()).subSequence(text))) {
         return;
       }
 
@@ -45,7 +48,7 @@ final class CommitAnnotator implements Annotator {
 
       String message = problem.getDescriptionTemplate(true);
       String tooltip = problem.getTooltipTemplate();
-      LocalQuickFix[] fixes = runner.toFixes(problem, descriptors.get(0));
+      LocalQuickFix[] fixes = runner.toFixes(problem, descriptors.getFirst());
 
       for (TextRange range : problem.getHighlightRanges()) {
         boolean isStyle = problem.isStyleLike();
